# game-showcase

./: .gitignore  CMakeLists.txt  build.sh  rebuild.sh  run.sh
inc/: Application.hpp  ApplicationEvent.hpp  Game.hpp  GameController.hpp  IController.hpp  Map.hpp  MenuController.hpp  ResourceManager.hpp  game.hpp  gamecontrollercallback.h
resources/: .gitignore  beer.png~  hero.krz
resources/maps/: map1.map
src/: Application.cpp  CMakeLists.txt  Game.cpp  GameController.cpp  IController.cpp  Logger.cpp  Main.cpp  Map.cpp  MenuController.cpp  README.md  ResourceManager.cpp  build.sh  controller.cpp  game.cpp  gamecontroller.cpp  logger.cpp  main.cpp  map.cpp  resourcemanager.cpp
src/inc/: controller.h  gamecontroller.h  logger.h  resourcemanager.h
src/resources/: config.ini  hero.krz~  hero1.png-autosave.kra
